fix board overflow for all N in 1 to 100

--- a/style.css
+++ b/style.css
@@ -69,5 +69,5 @@ body{
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-content: space-evenly;
-    background-color: #888888;
+    background-color: #eeeeee;
 }
